--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <h2 class="section-heading">Analysis</h2>
                     <h3 style="font-size: 28px; margin-top: 36px; margin-bottom: 64px">1. People with stroke based on Age, Gender and Married</h3>
-                    <div style="display: flex; justify-content: space-between;">
+                    <div style="display: flex; justify-content: space-between; flex-wrap:wrap">
                         <img src="./assets/img/PercentPPLHavingStroke.png" alt="">
                         <img src="./assets/img/GenderAndStroke.png" alt="">
                         <img src="./assets/img/MarriedAndStroke.png" alt="">
