--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
                     <h3 style="font-size: 28px; margin-top: 36px; margin-bottom: 64px">1. People with stroke based on Age, Gender and Married</h3>
                     <div style="display: flex; justify-content: space-between; flex-wrap:wrap">
                         <img src="./assets/img/PercentPPLHavingStroke.png" alt="">
-                        <img src="./assets/img/GenderAndStroke.png" alt="">
                         <img src="./assets/img/MarriedAndStroke.png" alt="">
+                    </div>
+                    <div style="display: flex; justify-content: center">
+                        <img src="./assets/img/GenderAndStroke.png" alt="">
                     </div>
                     <div style="display: flex; justify-content: center">
                         <img src="./assets/img/AgeAndStroke.png" alt="">
